# fuel-ee

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  docker_recreate_redis.sh  docker_stop.sh  recreate_redis.sh  stop_docker.sh
crates/abi_rs_gen/: .gitignore  Cargo.toml  Makefile
crates/abi_rs_gen/assets/: precompile_fvm.rwasm  precompile_fvm.wasm
crates/abi_rs_gen/assets/solidity/: Events.sol
crates/abi_rs_gen/src/: main.rs
crates/contracts/: .gitignore  Cargo.toml  Makefile
crates/contracts/assets/: precompile_fvm.rwasm  precompile_fvm.wasm
crates/contracts/assets/solidity/: Events.sol  Interfaces.sol
crates/contracts/src/: fvm.rs  fvm.rs.bck  fvm_codec.rs  fvm_test.rs  generated.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: helpers_fvm.rs  lib.rs
crates/core/src/fvm/: exec.rs  helpers.rs  tests.rs  transact.rs  types.rs
e2e/: Cargo.toml
e2e/src/: generated.rs  lib.rs  revm.rs
examples/: Makefile  package.json  send-fuel-tx.js  send-wrapped-fuel-tx.js
fuel-proxy/: config.yaml  go.mod  go.sum  gqlgen.yml  main.go  runtimeTest.go
fuel-proxy/graphql_entrypoints/: dry_run.go  estimate_gas_price.go  get_chain.go  get_coins.go  get_coins_to_spend.go  get_node_info.go  submit.go
fuel-proxy/graphql_input_objects/: exclude_input.go
fuel-proxy/graphql_object/: block.go  chain_info.go  coin.go  coin_type.go  consensus_parameters.go  contract_parameters_version.go  dependent_cost_test.go  dry_run_failure_status.go  dry_run_success_status.go  dry_run_transaction_execution_status.go  dry_run_transaction_status.go  fee_parameters.go  fee_parameters_version.go  gas_costs_version.go  header.go  message_coin.go  node_info.go  predicate_parameters.go  program_state.go  receipt.go  receipt_type.go  script_parameters.go  script_parameters_version.go  spend_query_element_input.go  submit.go  transaction.go  tx_parameters_version.go  types.go
fuel-proxy/graphql_scalars/: U32Hex.go  U64_test.go  address.go  bytes32.go  bytes34.go  hex_string.go
fuel-proxy/graphql_schemas/: block.go  chain.go  chain_info.go  consensus_parameters.go  consensus_parameters_version.go  contract_parameters.go  contract_parameters_version.go  dependent_cost.go  dependent_cost_test.go  fee_parameters.go  fee_parameters_version.go  gas_costs.go  gas_costs_version.go  gas_price.go  header.go  heavy_operation.go  light_operation.go  node.go  node_info.go  page_info.go  predicate_parameters.go  predicate_parameters_version.go  script_parameters.go  script_parameters_version.go  transaction.go  tx_parameters.go  tx_parameters_version.go  types.go
fuel-proxy/graphql_types/: U32.go  U32Hex.go  U32Hex_test.go  U32_test.go  U64.go  U64_test.go  types.go
fuel-proxy/helpers/: http.go
fuel-proxy/src/common/: bits.go  util.go
fuel-proxy/src/config/: config.go  helpers.go
fuel-proxy/src/container/: di.go
fuel-proxy/src/graphql_entrypoints/: dry_run.go  estimate_gas_price.go  get_chain.go  get_coins.go  get_coins_to_spend.go  get_node_info.go  submit.go
fuel-proxy/src/graphql_input_objects/: coin_filter_input.go  exclude_input.go
fuel-proxy/src/graphql_object/: block.go  chain_info.go  coin.go  coin_type.go  consensus_parameters.go  consensus_parameters_version.go  contract_parameters.go  dependent_cost.go  dependent_cost_test.go  dry_run.go  dry_run_failure_status.go  dry_run_success_status.go  dry_run_transaction_execution_status.go  dry_run_transaction_status.go  fee_parameters.go  gas_costs.go  gas_price.go  get_coins.go  header.go  heavy_operation.go  light_operation.go  message_coin.go  node.go  node_info.go  page_info.go  predicate_parameters_version.go  program_state.go  receipt.go  spend_query_element_input.go  submit.go  transaction.go  tx_parameters.go
fuel-proxy/src/graphql_scalars/: U32.go  U32Hex_test.go  U32_test.go  U64.go  bigInt_test.go  bytes32.go  bytes34.go
fuel-proxy/src/helpers/: common.go  interfaces.go
fuel-proxy/src/repo/: keyTemplates.go
fuel-proxy/src/repo/utxoRepo/: repo.go  txCommitEntityConsts.go  utxoEntity.go
fuel-proxy/src/services/graphqlServerService/: service.go  structs.go
fuel-proxy/src/services/utxoService/: service.go
fuel-proxy/src/types/: consts.go
fuel-proxy/types/: consts.go
