[package]
name = "fuel-ee-contracts"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fluentbase-sdk = { workspace = true, default-features = false }
fluentbase-core = { workspace = true, default-features = false }

# fuel
fuel-tx = { workspace = true, default-features = false, features = ["alloc"] }
fuel-core-types = { workspace = true, default-features = false }
fuel-core-storage = { workspace = true, default-features = false }

fuel-ee-core = { workspace = true }

alloy-rlp = { workspace = true, default-features = false }
alloy-sol-types = { workspace = true }

[features]
default = []
fvm = []
testing = []
