[package]
name = "fuel-ee-core"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fluentbase-sdk = { workspace = true, default-features = false }
rwasm = { workspace = true, default-features = false }

byteorder = { workspace = true, default-features = false }
alloy-rlp = { workspace = true }
alloy-sol-types = { workspace = true }
hashbrown = { workspace = true }
paste = { workspace = true }
anyhow = { workspace = true, default-features = false }
postcard = { workspace = true, default-features = false, features = ["alloc"] }
keccak-hash = { version = "0.11.0", default-features = false }
phantom-type = { workspace = true }
hex = { workspace = true, default-features = false, features = ["alloc"] }
hex-literal = { workspace = true }
alloy-primitives = { workspace = true }

fuel-core-types = { workspace = true, default-features = false, features = ["serde", "alloc"] }
fuel-core-storage = { workspace = true, default-features = false, features = ["alloc"] }
fuel-core-executor = { workspace = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
hex = { workspace = true }
hex-literal = { workspace = true }
fuel-core = { workspace = true, features = ["test-helpers"] }
fuel-core-types = { workspace = true, default-features = false, features = ["serde", "alloc", "test-helpers"] }
fuel-core-storage = { workspace = true, default-features = false, features = ["alloc", "test-helpers"] }
fuel-core-executor = { workspace = true, default-features = false, features = ["alloc", "test-helpers"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "fluentbase-sdk/std",
#    "fluentbase-runtime/std",
]
debug-print = []
